[gd_scene load_steps=9 format=3 uid="uid://bpdkrklmfacse"]

[ext_resource type="Texture2D" uid="uid://dt28rxky5l0gk" path="res://graphics/player/player.png" id="1_2qepm"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_pg5kl"]
[ext_resource type="Texture2D" uid="uid://ck8vj776trhi8" path="res://graphics/decals/white.png" id="3_kwcdm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_spoda"]
radius = 64.0078

[sub_resource type="Gradient" id="Gradient_2t1bh"]
colors = PackedColorArray(0.498039, 0.835294, 0.839216, 1, 0.498039, 0.835294, 0.839216, 0.188235)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_56v0x"]
gradient = SubResource("Gradient_2t1bh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lb12t"]
particle_flag_disable_z = true
spread = 71.53
gravity = Vector3(0, 0, 0)
initial_velocity_min = 715.79
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.1
scale_max = 0.3
color = Color(0.498039, 0.835294, 0.839216, 0.513726)
color_ramp = SubResource("GradientTexture1D_56v0x")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4cxwm"]
polygon = PackedVector2Array(-23, 96, -31, 94, -36, 90, -38, 83, -43, 75, -44, 70, -49, 68, -52, 64, -54, 58, -51, 55, -52, 52, -58, 49, -62, 36, -61, 30, -60, 18, -57, 10, -54, 7, -49, -3, -44, -8, -34, -11, -31, -9, -28, -10, -28, -14, -17, -20, -12, -20, -11, -18, -3, -22, 12, -21, 20, -23, 26, -22, 35, -11, 43, -4, 43, 0, 47, 8, 56, 10, 64, 14, 72, 24, 77, 28, 85, 26, 93, 30, 97, 34, 108, 35, 112, 39, 121, 40, 124, 41, 122, 45, 126, 44, 131, 46, 133, 55, 132, 63, 127, 71, 123, 69, 120, 68, 121, 73, 114, 75, 108, 72, 102, 80, 96, 82, 96, 88, 92, 90, 61, 90, 58, 86, 58, 81, 56, 79, 46, 79, 42, 78, 38, 81, 31, 84, 25, 84, 19, 87, 12, 91, 6, 94, -3, 97, -12, 99, -17, 99)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_pg5kl")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_spoda")

[node name="LaserStartPositions" type="Node2D" parent="."]
position = Vector2(1, -37)

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 56)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(127, 48)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 65)

[node name="GrenadeStartPosition" type="Node2D" parent="."]
position = Vector2(1, -37)

[node name="GrenadeMarker" type="Marker2D" parent="GrenadeStartPosition"]
position = Vector2(129, 56)

[node name="LaserParticles" type="GPUParticles2D" parent="."]
position = Vector2(131, 20)
emitting = false
amount = 26
process_material = SubResource("ParticleProcessMaterial_lb12t")
texture = ExtResource("3_kwcdm")
lifetime = 0.15
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(1, -37)
occluder = SubResource("OccluderPolygon2D_4cxwm")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 1)
rotation = 1.5708
texture = ExtResource("1_2qepm")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
